# smart-crawler

./: .pre-commit-config.yaml  CLAUDE.md  README.md  plans.md  pyproject.toml
benchmark/: README.md  __init__.py  methodology.md  pilot.py  pilot_full.py
benchmark/baselines/: __init__.py  b0_naive.py  b1_crawl4ai.py  b3_smart.py  b5_tavily.py
benchmark/harness/: __init__.py  judge.py  llm.py  metrics.py  runner.py  search.py  serializer.py  tokenizer.py  types.py
benchmark/queries/: __init__.py  browsecomp.py  freshqa.py  freshqa_2025_11_24.csv
benchmark/results/: pilot_b6.json  pilot_full.json  pilot_run.json
research/: 01_crawl4ai_api_surface.md  02_adaptive_stopping.md  03_anthropic_multiagent_pattern.md  04_citation_grounding.md  05_schema_inference.md  06_design_synthesis.md
research/validation/: 01_orchestrator_subagent_pattern.md  02_citation_grounding.md  03_schema_vs_llm_extraction.md  04_adaptive_stop_conditions.md  05_token_noise_quantification.md  06_stateless_vs_stateful.md  07_indirect_prompt_injection.md  08_oss_landscape_gap.md  09_synthesis.md  10_grounding_failures.md
smart_crawler/: __init__.py  api.py  citer.py  crawler.py  discoverer.py  extractor.py  llm.py  pipeline.py  planner.py  probe.py  repairer.py  router.py  types.py
